--- a/index.html
+++ b/index.html
@@ -1,17 +1,29 @@
-<!doctype html>
+<!doctype html lang="es ES">
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang=""> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang=""> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9" lang=""> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js" lang=""> <!--<![endif]-->
     <head>
         <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="apple-touch-icon" href="apple-touch-icon.png">
-        <link rel="stylesheet" href="css/normalize.min.css">
-        <link rel="stylesheet" href="css/main.css">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+        <title>Agencia Marketing Digital de Peluquería | PeluMark</title>
+        <meta name="description" content="Agencia de Marketing digital especializada en peluquería, salon de belleza y barbería en Barcelona.Te ayudamos a digitalizar tu salón de belleza y aumentar tu cartera de clientes. Ponte en contacto con nosotros y aumentaremos la rentabilidad de tu peluquería." />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta name="robots" content="index, follow" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="keywords" content="marketing digital de peluqueria, peluquería, salón de belleza, barbería, Barcelona, agencia marketing, agencia marketing peluqueria, marketing peluquería, barbería Barcelona, peluquería Barcelona" />
+        <meta name="revised" content="Thursday, April 2nd, 2020, 5:15 pm" />
+        <meta name="language" content="ES">
+        <meta property="og:title" content="Agencia Marketing Digital de Peluquería | PeluMark" />
+        <meta property="og:description" content="Agencia de Marketing digital especializada en peluquería, salon de belleza y barbería en Barcelona.Te ayudamos a digitalizar tu salón de belleza y aumentar tu cartera de clientes. Ponte en contacto con nosotros y aumentaremos la rentabilidad de tu peluquería." />
+        <meta property="og:url" content="https://pelumark.com/" />
+        <meta property="og:site_name" content="PeluMark.com" />
+        <meta name="twitter:card" content="summary_large_image" />
+
+        <link rel="apple-touch-icon" href="apple-touch-icon.png" />
+        <link rel="stylesheet" href="css/normalize.min.css" />
+        <link rel="stylesheet" href="css/main.css" />
+        <!-- <script type="text/javascript" src="/js/main.js"> -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
         <script src="/js/vendor/lazysizes.min.js" async=""></script>
@@ -32,75 +44,75 @@
         <div class="main-container">
             <header style="background-image: url('/img/header_bg.jpg')" data-bg >
                 <img src="/img/pelumark_logo.svg" alt="PeluMark logo" />
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec.</p>
+                <p>PeluMark es la agencia de marketing digital especializada en el mundo de las peluquerías, barberías y salones de belleza en Barcelona. Dale un lavado de imagen a tu peluquería, manteniendo la esencia que le caracteriza y aumenta así el número de clientes y la fidelización de estos.</p>
                 <button>Saber Más</button>
             </header>
             <section>
               <div class="caja">
                 <div class="caja-inner">
-                  <h3>HACEMOS CRECER TÚ NEGOCIO</h3>
-                  <p>Aparece en los primeros resultados de Internet e incrementa las visitas a tu web.</p>
+                  <h3>Saca partido a tu presencia online</h3>
+                  <p>Aumenta las citas en tu peluquería. La única Agencia de Marketing de Peluquerías que te garantiza un Incremento de nuevos clientes.</p>
                 </div>
               </div>
               <div style="background-image: url('/img/image_two.jpg')"  class="caja imagefiller" data-bg></div>
               <div class="caja">
                 <div class="caja-inner">
-                  <img class="lazyload" alt="seo" data-src="/img/seo.png"  />
-                  <h3>SEO</h3>
-                  <p>Aparece en los primeros resultados de Internet e incrementa las visitas a tu web.</p>
-                </div>
-              </div>
-              <div class="caja">
-                <div class="caja-inner">
-                  <img class="lazyload" alt="diseño web" data-src="/img/disenoweb.png"  />
+                  <img class="lazyload" alt="Diseño Web" data-src="/img/disenoweb.png"  />
                   <h3>Diseño Web</h3>
-                  <p>La página web es un establecimiento abierto las 24 horas durante los 365 días donde pueden encontrarte futuros clientes. Mejora tu imagen y diferenciate de la competencia.</p>
+                  <p>”La página web es un establecimiento abierto las 24 horas durante los 365 días donde pueden encontrarte futuros clientes”. Mejora tu imagen y diferenciate de la competencia.</p>
                 </div>
               </div>
               <div class="caja">
                 <div class="caja-inner">
-                  <img class="lazyload" alt="redes sociales" data-src="/img/redes_sociales.png"  />
-                  <h3>REDES SOCIALES</h3>
-                  <p>Aumenta la notoriedad y visibilidad de tú peluquería en redes sociales. Amplia tu cartera de clientes y promociona tusservicios.</p>
+                  <img class="lazyload" alt="Sistema de Reserva" data-src="/img/reserva.png"  />
+                  <h3>Sistema de Reserva</h3>
+                  <p>Aporta comodidad a tu cliente y añade un sistema de reserva a tu página web para que puedan solicitar la cita automáticamente. Este método también facilitará la organización de tu peluquería.</p>
+                </div>
+              </div>
+              <div class="caja">
+                <div class="caja-inner">
+                  <img class="lazyload" alt="Branding" data-src="/img/branding.png"  />
+                  <h3>Branding</h3>
+                  <p>Diseñamos y gestionamos de manera estratégica y creativa la imagen de tu marca a través de logo, tarjeta de visita, carteles publicitarios... El branding es un elemento muy importante ya que servirá de elemento diferenciador e identificativo.</p>
+                </div>
+              </div>
+              <div class="caja">
+                <div class="caja-inner">
+                  <img class="lazyload" alt="Google Maps" data-src="/img/google_mybusiness.png"  />
+                  <h3>Google Maps</h3>
+                  <p>Aparece por delante de tu competencia y facilita la localización en Google Maps. “2 de cada 3 de los usuarios que visitan una peluquería por primera vez lo hacen a través de Google Maps”</p>
+                </div>
+              </div>
+              <div class="caja">
+                <div class="caja-inner">
+                  <img class="lazyload" alt="Redes sociales" data-src="/img/redes_sociales.png"  />
+                  <h3>Redes Sociales</h3>
+                  <p>Te ofrecemos la opción de aumentar la notoriedad y visibilidad de tu peluquería en redes sociales. Promociona los servicios que ofreces y muestra los resultados que obtienes con otros clientes.</p>
                 </div>
               </div>
               <div class="caja">
                 <div class="caja-inner">
                   <img class="lazyload" alt="sem" data-src="/img/sem.png"  />
-                  <h3>SEM</h3>
-                  <p>Filtra a tu público objetivo, aumenta el tráfico de tu web y consigue captar a nuevos clientes.</p>
+                  <h3>Publicidad (SEM)</h3>
+                  <p>Filtramos al público objetivo de tu peluquería, aumentamos el tráfico a tu página web a través de la publicidad en Internet y conseguimos así captar a nuevos clientes.</p>
                 </div>
               </div>
               <div class="caja">
                 <div class="caja-inner">
-                  <img class="lazyload" alt="google mybusiness" data-src="/img/google_mybusiness.png"  />
-                  <h3>GOOGLE MYBUSINESS</h3>
-                  <p>Aparece por delante de tu competencia y facilita la localización en Google Maps. 2 de cada 3 de los usuarios que visitan una peluquería por primera vez lo hacen a través de Google Maps.</p>
+                  <img class="lazyload" alt="sistema de reserva" data-src="/img/seo.png"  />
+                  <h3>Posicionamiento (SEO)</h3>
+                  <p>Incrementamos tu visibilidad en Internet para que tu peluquería aparezca en los primeros resultados de búsqueda, posicionándose así por encima de tus competidores y llegando a un mayor número de usuarios.</p>
                 </div>
               </div>
               <div class="caja">
                 <div class="caja-inner">
-                  <img class="lazyload" alt="video y fotografia" data-src="/img/video.png"  />
-                  <h3>VÍDEO & FOTOGRAFíA</h3>
-                  <p>Muestra a tus futuros clientes los valores de tu peluquería, mostrando una visión más cercana, familiar y profesional. No existe mejor forma de transmitir confianza a tus clientes. Presenta al público el antes y el después del look de tus clientes,para que los usuarios observen el resultado de tus servicios.</p>
-                </div>
-              </div>
-              <div class="caja">
-                <div class="caja-inner">
-                  <img class="lazyload" alt="sistema de reserva" data-src="/img/reserva.png"  />
-                  <h3>SISTEMA DE RESERVA</h3>
-                  <p>Añade un sistema de reserva a tu web para que puedan solicitar la cita automáticamente y facilita tu organización interna.</p>
-                </div>
-              </div>
-              <div class="caja">
-                <div class="caja-inner">
-                  <img class="lazyload" alt="branding" data-src="/img/branding.png"  />
-                  <h3>BRANDING</h3>
-                  <p>Diseñamos tú imagen de marca atrayendo así a más clientes y hacer que tu negocio sea reconocido.</p>
+                  <img class="lazyload" alt="Video & Fotografía" data-src="/img/video.png"  />
+                  <h3>Video & Fotografía</h3>
+                  <p>Enseña a tus futuros clientes los valores de tu peluquería, mostrando una visión más cercana, familiar y profesional. Utilizar elementos audiovisuales como un video y fotografías permiten transmitir un ápice de confianza a tus clientes.</p>
                 </div>
               </div>
             </section>
-            <section style="background-image: url('/img/form_bg.jpg')"  id="contact" data-bg>
+            <section style="background-image: url('/img/form_bg.jpg')"  id="contacto" data-bg>
               <h2>LISTO PARA HACER CRECER TÚ PELUQUERÍA?</h2>
 
               <!-- <div id="mauticform_wrapper_pelumark"></div> -->
@@ -177,6 +189,15 @@
           <a class="goobutt-item" href="mailto:hola@pelumark.com"><i class="fas fa-envelope"></i></a>
         </nav>
 
+        <div id="popup" class="popup__wrapper">
+          <div class="popup__container">
+            <i class="fas fa-times" id="close" ></i>
+            <h1>¡No pierdas esta oportunidad!</h1>
+            <p>¡Aumenta tus clientes por 99€!</p>
+            <button id="popup__btn" type="discount" href="#contacto">CONTÁCTANOS</button>
+          </div>
+        </div>
+
         <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js" defer></script>
         <script src="https://kit.fontawesome.com/4b977b2858.js" crossorigin="anonymous"></script>
         <link href="https://calendly.com/assets/external/widget.css" rel="stylesheet" defer />
@@ -202,6 +223,36 @@
           }
         </script>
 
+        <script>
+          function onMouseOut(event) {
+            if (
+                event.clientY < 50 &&
+                event.relatedTarget == null &&
+                event.target.nodeName.toLowerCase() !== 'select') {
+                    document.removeEventListener("mouseout", onMouseOut);
+                    document.getElementById("popup").style.display = "flex";
+                }
+              }
+
+              document.addEventListener("mouseout", onMouseOut);
+
+              var modal = document.getElementById('popup');
+              var close = document.getElementById("close");
+              var boton = document.getElementById("popup__btn");
+
+              close.onclick = function() {
+                  modal.style.display = "none";
+              }
+              boton.onclick = function() {
+                  modal.style.display = "none";
+                  window.location.href='#contacto';
+              }
+              window.onclick = function(event) {
+                  if (event.target === modal) {
+                      modal.style.display = "none";
+                  }
+              }
+        </script>
 
         <!-- Google Analytics -->
         <script>
