--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
             <header style="background-image: url('/img/header_bg.jpg')" data-bg >
                 <img src="/img/pelumark_logo.svg" alt="PeluMark logo" />
                 <p>PeluMark es la agencia de marketing digital especializada en el mundo de las peluquerías, barberías y salones de belleza en Barcelona. Dale un lavado de imagen a tu peluquería, manteniendo la esencia que le caracteriza y aumenta así el número de clientes y la fidelización de estos.</p>
-                <button>Saber Más</button>
+                <button href="#services">Saber Más</button>
             </header>
-            <section>
+            <section id="services">
               <div class="caja">
                 <div class="caja-inner">
                   <h3>Saca partido a tu presencia online</h3>
@@ -154,7 +154,7 @@
               
                           <div id="mauticform_pelumark_mensaje" class="mauticform-row mauticform-text mauticform-field-6">
                               <!-- <label id="mauticform_label_pelumark_mensaje" for="mauticform_input_pelumark_mensaje" class="mauticform-label">Mensaje</label> -->
-                              <textarea id="mauticform_input_pelumark_mensaje" name="mauticform[mensaje]" class="mauticform-textarea" placeholder="Dejanos algun mensaje" required></textarea>
+                              <textarea id="mauticform_input_pelumark_mensaje" name="mauticform[mensaje]" class="mauticform-textarea" placeholder="Dejanos tu mensaje" required></textarea>
                               <span class="mauticform-errormsg" style="display: none;"></span>
                           </div>
               
