--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
-<!doctype html lang="es ES">
+<!doctype html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang=""> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang=""> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9" lang=""> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js" lang=""> <!--<![endif]-->
+<!--[if gt IE 8]><!--> 
+  <html class="no-js" lang="es ES"> 
+<!--<![endif]-->
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
@@ -19,7 +21,6 @@
         <meta property="og:url" content="https://pelumark.com/" />
         <meta property="og:site_name" content="PeluMark.com" />
         <meta name="twitter:card" content="summary_large_image" />
-
         <link rel="apple-touch-icon" href="apple-touch-icon.png" />
         <link rel="stylesheet" href="css/normalize.min.css" />
         <link rel="stylesheet" href="css/main.css" />
