--- a/index.html
+++ b/index.html
@@ -113,6 +113,29 @@
                 </div>
               </div>
             </section>
+
+            <section id="about">
+                <div>
+                  <h3>¿CÓMO TRABAJAMOS CONTIGO?</h3>
+                  <p>Nos reunimos para conocer tu peluquería y tu método de trabajo, hacemos un análisis de todos los factores que influyen en tu negocio y definimos los objetivos que quieres conseguir. A partir de este previo análisis, ponemos en marcha la estrategia que mejor se adapte a tu peluquería, con el fin de conseguir los objetivos marcados. Por último, gracias a nuestras medidas de control, hacemos un seguimiento de la estrategia puesta en marcha y observamos si los resultados obtenidos coinciden con los objetivos marcados.</p>
+                </div>
+                <div id="three">
+                  <div id="boxoutline">
+                    <h4>Reuniones Previas</h4>
+                    <p>En PeluMark nos sentamos contigo, escuchamos tus necesidades, y tus objetivos, porque nadie conoce mejor tu negocio que tú mismo. En base a estas reuniones elaboramos el presupuesto para lograr los objetivos deseados.</p>
+                  </div>
+                  <div id="boxoutline">
+                    <h4>Estrategia para Aumentar Ventas</h4>
+                    <p>En cualquier acción de Publicidad y Marketing, el objetivo final es el Aumento de ventas, lo que nos diferencia es la manera de conseguirlo. Trabajar en la estrategia apropiada es imprescindible para conseguir resultados reales. </p>
+                  </div>
+                  <div id="boxoutline">
+                    <h4>Puesta en Marcha y Seguimiento</h4>
+                    <p>Una vez analizada la estrategia, se inician nuestro plan de Marketing y realizamos un seguimiento para observar si los resultados coinciden con los objetivos marcados, paso indispensable para optimizar tu peluquería a corto y largo plazo.</p>
+                  </div>
+                </div>
+
+            </section>
+
             <section style="background-image: url('/img/form_bg.jpg')"  id="contacto" data-bg>
               <h2>LISTO PARA HACER CRECER TÚ PELUQUERÍA?</h2>
 
