--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             <section id="about">
                 <div>
                   <h3>¿CÓMO TRABAJAMOS CONTIGO?</h3>
-                  <p>Nos reunimos para conocer tu peluquería y tu método de trabajo, hacemos un análisis de todos los factores que influyen en tu negocio y definimos los objetivos que quieres conseguir. A partir de este previo análisis, ponemos en marcha la estrategia que mejor se adapte a tu peluquería, con el fin de conseguir los objetivos marcados. Por último, gracias a nuestras medidas de control, hacemos un seguimiento de la estrategia puesta en marcha y observamos si los resultados obtenidos coinciden con los objetivos marcados.</p>
+                  <!-- <p>Nos reunimos para conocer tu peluquería y tu método de trabajo, hacemos un análisis de todos los factores que influyen en tu negocio y definimos los objetivos que quieres conseguir. A partir de este previo análisis, ponemos en marcha la estrategia que mejor se adapte a tu peluquería, con el fin de conseguir los objetivos marcados. Por último, gracias a nuestras medidas de control, hacemos un seguimiento de la estrategia puesta en marcha y observamos si los resultados obtenidos coinciden con los objetivos marcados.</p> -->
                 </div>
                 <div id="three">
                   <div id="boxoutline">
