--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
             <header style="background-image: url('/img/header_bg.jpg')" data-bg >
                 <img src="/img/pelumark_logo.svg" alt="PeluMark logo" />
                 <p>PeluMark es la agencia de marketing digital especializada en el mundo de las peluquerías, barberías y salones de belleza en Barcelona. Dale un lavado de imagen a tu peluquería, manteniendo la esencia que le caracteriza y aumenta así el número de clientes y la fidelización de estos.</p>
-                <button href="#services">Saber Más</button>
+                <a href="#services">Saber Más</a>
             </header>
-            <section id="services">
+            <section>
               <div class="caja">
                 <div class="caja-inner">
                   <h3>Saca partido a tu presencia online</h3>
@@ -56,11 +56,11 @@
                 </div>
               </div>
               <div style="background-image: url('/img/image_two.jpg')"  class="caja imagefiller" data-bg></div>
-              <div class="caja">
+              <div id="services" class="caja">
                 <div class="caja-inner">
                   <img class="lazyload" alt="Diseño Web" data-src="/img/disenoweb.png"  />
                   <h3>Diseño Web</h3>
-                  <p>”La página web es un establecimiento abierto las 24 horas durante los 365 días donde pueden encontrarte futuros clientes”. Mejora tu imagen y diferenciate de la competencia.</p>
+                  <p>”La página web es un establecimiento abierto las 24 horas durante los 365 días donde pueden encontrarte futuros clientes”. <br>Mejora tu imagen y diferenciate de la competencia.</p>
                 </div>
               </div>
               <div class="caja">
@@ -74,14 +74,14 @@
                 <div class="caja-inner">
                   <img class="lazyload" alt="Branding" data-src="/img/branding.png"  />
                   <h3>Branding</h3>
-                  <p>Diseñamos y gestionamos de manera estratégica y creativa la imagen de tu marca a través de logo, tarjeta de visita, carteles publicitarios... El branding es un elemento muy importante ya que servirá de elemento diferenciador e identificativo.</p>
+                  <p>Diseñamos y gestionamos de manera estratégica y creativa la imagen de tu marca a través de logo, tarjeta de visita, carteles publicitarios... <br>El branding es un elemento muy importante ya que servirá de elemento diferenciador e identificativo.</p>
                 </div>
               </div>
               <div class="caja">
                 <div class="caja-inner">
                   <img class="lazyload" alt="Google Maps" data-src="/img/google_mybusiness.png"  />
                   <h3>Google Maps</h3>
-                  <p>Aparece por delante de tu competencia y facilita la localización en Google Maps. “2 de cada 3 de los usuarios que visitan una peluquería por primera vez lo hacen a través de Google Maps”</p>
+                  <p>Aparece por delante de tu competencia y facilita la localización en Google Maps. <br>“2 de cada 3 de los usuarios que visitan una peluquería por primera vez lo hacen a través de Google Maps”</p>
                 </div>
               </div>
               <div class="caja">
@@ -137,7 +137,7 @@
             </section>
 
             <section style="background-image: url('/img/form_bg.jpg')"  id="contacto" data-bg>
-              <h2>LISTO PARA HACER CRECER TÚ PELUQUERÍA?</h2>
+              <h2>¿LISTO PARA HACER CRECER TÚ PELUQUERÍA?</h2>
 
               <!-- <div id="mauticform_wrapper_pelumark"></div> -->
                   <form autocomplete="false" role="form" method="post" action="https://phpstack-365445-1147909.cloudwaysapps.com/index.php/form/submit?formId=4" id="mauticform_pelumark" data-mautic-form="pelumark" enctype="multipart/form-data">
