--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
         <div class="main-container">
             <header style="background-image: url('/img/header_bg.jpg')" data-bg >
-                <img src="/img/pelumark_logo.svg" alt="PeluMark logo" />
+                <img src="/img/pelumark_logo_pink.svg" alt="PeluMark logo" />
                 <p>PeluMark es la agencia de marketing digital especializada en el mundo de las peluquerías, barberías y salones de belleza en Barcelona. Dale un lavado de imagen a tu peluquería, manteniendo la esencia que le caracteriza y aumenta así el número de clientes y la fidelización de estos.</p>
                 <a href="#services">Saber Más</a>
             </header>
