--- a/index.html
+++ b/index.html
@@ -16,6 +16,23 @@
         <meta name="keywords" content="marketing digital de peluqueria, peluquería, salón de belleza, barbería, Barcelona, agencia marketing, agencia marketing peluqueria, marketing peluquería, barbería Barcelona, peluquería Barcelona" />
         <meta name="revised" content="Thursday, April 2nd, 2020, 5:15 pm" />
         <meta name="language" content="ES">
+        <link rel="apple-touch-icon" sizes="57x57" href="/img/ico/apple-icon-57x57.png">
+        <link rel="apple-touch-icon" sizes="60x60" href="/img/ico/apple-icon-60x60.png">
+        <link rel="apple-touch-icon" sizes="72x72" href="/img/ico/apple-icon-72x72.png">
+        <link rel="apple-touch-icon" sizes="76x76" href="/img/ico/apple-icon-76x76.png">
+        <link rel="apple-touch-icon" sizes="114x114" href="/img/ico/apple-icon-114x114.png">
+        <link rel="apple-touch-icon" sizes="120x120" href="/img/ico/apple-icon-120x120.png">
+        <link rel="apple-touch-icon" sizes="144x144" href="/img/ico/apple-icon-144x144.png">
+        <link rel="apple-touch-icon" sizes="152x152" href="/gim/ico/apple-icon-152x152.png">
+        <link rel="apple-touch-icon" sizes="180x180" href="/img/ico/apple-icon-180x180.png">
+        <link rel="icon" type="image/png" sizes="192x192"  href="/img/ico/android-icon-192x192.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/img/ico/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="96x96" href="/img/ico/favicon-96x96.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/img/ico/favicon-16x16.png">
+        <link rel="manifest" href="/img/ico/manifest.json">
+        <meta name="msapplication-TileColor" content="#F7CDDA">
+        <meta name="msapplication-TileImage" content="/img/ico/ms-icon-144x144.png">
+        <meta name="theme-color" content="#F277A8">
         <meta property="og:title" content="Agencia Marketing Digital de Peluquería | PeluMark" />
         <meta property="og:description" content="Agencia de Marketing digital especializada en peluquería, salon de belleza y barbería en Barcelona.Te ayudamos a digitalizar tu salón de belleza y aumentar tu cartera de clientes. Ponte en contacto con nosotros y aumentaremos la rentabilidad de tu peluquería." />
         <meta property="og:url" content="https://pelumark.com/" />
